// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseFloatingMenu (Diamond Snapshot) > Admin (AYARLAR) görünümü snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100] origin-bottom-right"
    style="transform: scale(0.95);"
  >
    <div
      class="flex flex-col items-center p-1 bg-white/70 backdrop-blur-3xl border border-white/40 shadow-[0_20px_50px_rgba(0,0,0,0.15)] rounded-xl transition-all duration-200 ease-in-out overflow-hidden w-[110px]"
    >
      <div
        class="w-full p-0.5"
      >
        <button
          aria-label="Menüyü Aç"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        
              !bg-stone-900 !text-white border-transparent 
              hover:scale-[1.02] active:scale-95 transition-all h-12 w-full shadow-lg rounded-lg relative overflow-hidden
            
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-2.5 w-full h-full px-1"
            >
              <span
                class="text-[11px] font-black uppercase tracking-tight leading-none"
              >
                AYARLAR
              </span>
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-menu"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 5h16"
                  />
                  <path
                    d="M4 12h16"
                  />
                  <path
                    d="M4 19h16"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseFloatingMenu (Diamond Snapshot) > Default görünüm (kapalı) snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100] origin-bottom-right"
    style="transform: scale(0.95);"
  >
    <div
      class="flex flex-col items-center p-1 bg-white/70 backdrop-blur-3xl border border-white/40 shadow-[0_20px_50px_rgba(0,0,0,0.15)] rounded-xl transition-all duration-200 ease-in-out overflow-hidden w-[110px]"
    >
      <div
        class="w-full p-0.5"
      >
        <button
          aria-label="Menüyü Aç"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        
              !bg-stone-900 !text-white border-transparent 
              hover:scale-[1.02] active:scale-95 transition-all h-12 w-full shadow-lg rounded-lg relative overflow-hidden
            
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-2.5 w-full h-full px-1"
            >
              <span
                class="text-[11px] font-black uppercase tracking-tight leading-none"
              >
                MENÜ
              </span>
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-layout-grid w-full h-full p-0.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="7"
                    rx="1"
                    width="7"
                    x="3"
                    y="3"
                  />
                  <rect
                    height="7"
                    rx="1"
                    width="7"
                    x="14"
                    y="3"
                  />
                  <rect
                    height="7"
                    rx="1"
                    width="7"
                    x="14"
                    y="14"
                  />
                  <rect
                    height="7"
                    rx="1"
                    width="7"
                    x="3"
                    y="14"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
